sample3/sample-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: '/sample1'
            pathType: Prefix
            backend:
              service:
                name: sample-service-1
                port:
                  number: 8080
          - path: '/sample2'
            pathType: Prefix
            backend:
              service:
                name: sample-service-2
                port:
                  number: 8080
